[metadata]
name = SHRY
version = 1.1.3
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/giprayogo/SHRY
project_urls =
    Bug tracker = https://github.com/giprayogo/SHRY/issues
    Documentations = https://shry.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = shry
python_requires = >="3.7.2"
install_requires =
    numpy>="1.17"
    pymatgen>="2019.1.13"
    scipy>="1.4.1"
    sympy>="1.5.1"
    xlrd>="1.0.0"
    tqdm>="4.60.0"
    pytest>="3.0.0"

[options.entry_points]
console_scripts =
    shry = shry.script:main
