[metadata]
name = SHRY
author = Genki Prayogo, Kosuke Nakano
author_email = g.prayogo@icloud.com, kousuke_1123@icloud.com
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/giprayogo/SHRY
project_urls =
    Bug tracker = https://github.com/giprayogo/SHRY/issues
    Documentations = https://shry.readthedocs.io/en/latest/
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = shry
python_requires = >=3.7.2
install_requires =
    numpy >= 1.17
    pandas >= 1.3.0
    pymatgen >= 2019.1.13
    scipy >= 1.4.1
    sympy >= 1.5.1
    tqdm >= 4.60.0
    pytest >= 3.0.0
    setuptools_scm >= 7.0.5
    xlrd >= 1.0.0

[options.entry_points]
console_scripts =
    shry = shry.script:main
